# sotu-analysis

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
